--- a/res/layout/layout_item_rank.xml
+++ b/res/layout/layout_item_rank.xml
@@ -6,7 +6,8 @@
     <LinearLayout 
     	android:layout_width="match_parent"
     	android:layout_height="@dimen/rankitem_height"
-    	android:orientation="horizontal" 
+    	android:orientation="horizontal"
+    	android:layout_marginLeft="5dp" 
     	android:gravity="center_vertical">
 	    <ImageView 
 		    android:id="@+id/id_img"
