--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,13 +5,13 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
     
-    <android.support.v4.view.ViewPager
+    <com.xiaoxiao.virgo.view.MyViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#FFF"
         android:layout_weight="1">   	    
-    </android.support.v4.view.ViewPager>
+    </com.xiaoxiao.virgo.view.MyViewPager>
     
     <View 
         android:layout_width="match_parent"
